# Advent-of-Code-rs

./: Cargo.toml  readme.md
src/: bench.rs  command.rs  main.rs  test.rs
src/puzzles/: mod.rs
src/puzzles/year2022/day01/: mod.rs
src/puzzles/year2022/day02/: mod.rs
src/puzzles/year2022/day03/: mod.rs
src/puzzles/year2022/day04/: mod.rs
src/puzzles/year2022/day05/: mod.rs
src/puzzles/year2022/day06/: mod.rs
src/puzzles/year2022/day07/: mod.rs
src/puzzles/year2022/day08/: mod.rs
src/puzzles/year2022/dayX/: mod.rs
