[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aoc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
itertools ={ version = "0.10.4" }
