[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aoc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive", "std"] }
itertools = { version = "0.10.4" }
num-traits = "0.2"
num-derive = "0.3"
sscanf = "0.4.0"
intervallum = "1.4.0"
gcollections = "1.5.0"
